# agentforge-arena

./: .code-review-graphignore  .env.example  .gitignore  CLAUDE.md  MODULES.json  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  builder.md  critic.md  devops.md  frontend.md  orchestrator.md  researcher.md  tester.md  tutor.md
.claude/commands/: operations.md  research-sweep.md  tournament-start.md
.claude/hooks/on-error/: error-recovery.sh
.claude/hooks/post-tool-use/: auto-format.sh  cost-tracker.sh  trace-logger.sh
.claude/hooks/pre-tool-use/: injection-scanner.sh  security-gate.sh
.claude/memory/: decisions-log.md  feedback_commit_push.md  gotchas.md
.claude/rules/: 00-global.md  01-code-quality.md  02-security.md  03-testing.md  04-architecture.md  05-agent-boundaries.md
.claude/skills/agent-factory/: SKILL.md
.claude/skills/build-graph/: SKILL.md
.claude/skills/elo-calculator/: SKILL.md
.claude/skills/github-researcher/: SKILL.md
.claude/skills/plugin-discovery/: SKILL.md
.claude/skills/project-scaffolder/: SKILL.md
.claude/skills/tournament-engine/: SKILL.md
.github/workflows/: evaluation.yml
challenges/: README.md
challenges/fixtures/url-shortener-saas/golden/: README.md  main.py  requirements.txt
docs/: ARCHITECTURE_OVERVIEW.md
docs/superpowers/plans/: 2026-03-31-api-routes-agent-runtime.md  2026-04-02-agent-memory-system.md  2026-04-02-autonomous-tournament-execution.md  2026-04-03-feature-implementation-handoff.md
docs/superpowers/specs/: 2026-03-31-api-routes-agent-runtime-design.md  2026-04-01-plan-01-wire-api-routes-design.md  2026-04-01-plan-02-llm-integration-design.md  2026-04-01-plan-03-challenge-library-design.md  2026-04-01-plan-04-redis-mailbox-wiring-design.md  2026-04-01-plans-05-10-outlines.md  2026-04-02-agent-memory-system-design.md  2026-04-02-autonomous-tournament-execution-design.md  2026-04-03-challenge-spec-v1-design.md
infra/docker/services/: litellm-config.yaml
scripts/: check_module_boundaries.py
scripts/eval/: run_url_shortener_golden_hidden_tests.py  validate_challenge_library.py
tournaments/duel-001-realtime-chat/results/: scoreboard.json
tournaments/duel-001-realtime-chat/team-alpha/: ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
tournaments/duel-001-realtime-chat/team-alpha/.claude/agents/: architect.md  tester.md
tournaments/duel-001-realtime-chat/team-alpha/.claude/hooks/: post-write-format.sh
tournaments/duel-001-realtime-chat/team-alpha/.claude/memory/: decisions-log.md  gotchas.md
tournaments/duel-001-realtime-chat/team-alpha/.claude/rules/: 00-global.md  01-code-quality.md  02-testing.md  03-architecture.md
tournaments/duel-001-realtime-chat/team-alpha/.claude/skills/websocket-chat/: SKILL.md
tournaments/duel-001-realtime-chat/team-alpha/docs/decisions/: 001-database-choice.md  002-websocket-pattern.md  003-message-persistence.md
tournaments/duel-001-realtime-chat/team-alpha/src/: config.py  database.py  main.py  messages.py  models.py  presence.py  rooms.py  websocket_manager.py
tournaments/duel-001-realtime-chat/team-alpha/tests/: conftest.py  test_messages.py  test_presence.py  test_rooms.py  test_websocket.py
tournaments/duel-001-realtime-chat/team-bravo/: ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
tournaments/duel-001-realtime-chat/team-bravo/src/: config.py  database.py  main.py  messages.py  models.py  presence.py  rooms.py  websocket_manager.py
tournaments/duel-001-realtime-chat/team-bravo/tests/: conftest.py  test_messages.py  test_presence.py  test_rooms.py  test_websocket.py
(+13 files in other folders)
