[project]
name = "agentforge-arena"
version = "2.0.0"
description = "Competitive tournament platform where AI agent teams build production apps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Yash", email = "yash@agentforge.dev" }]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Cache & Event Bus
    "redis[hiredis]>=5.2.0",

    # LLM
    "litellm>=1.55.0",
    "anthropic>=0.40.0",
    "openai>=1.58.0",

    # Tracing & Observability
    "langfuse>=2.55.0",
    "structlog>=24.4.0",

    # Object Storage
    "boto3>=1.35.0",

    # Docker
    "docker>=7.1.0",

    # Utilities
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "click>=8.1.0",

    # Vector Search
    "qdrant-client>=1.12.0",

    # WebSocket
    "python-socketio>=5.11.0",

    # Scientific (ELO)
    "numpy>=2.1.0",
    "scipy>=1.14.0",

    # Agent Runtime
    "claude-agent-sdk>=0.1.0",

    # Agent Memory System
    "fastembed>=0.5.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.25.0",
]

[project.scripts]
arena-tournament = "packages.core.src.tournament.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "fakeredis>=2.25.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
    "code-review-graph>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "RUF",       # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["packages"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = "--cov=packages --cov-branch --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
